# otter1

./: CMakeLists.txt  README.md  TODO
src/core/: ThemesManager.h
src/modules/backends/web/qtwebengine/: CMakeLists.txt  QtWebEnginePage.cpp  QtWebEnginePage.h  QtWebEngineTransfer.cpp  QtWebEngineTransfer.h  QtWebEngineWebBackend.cpp  QtWebEngineWebBackend.h  QtWebEngineWebWidget.cpp  QtWebEngineWebWidget.h
src/modules/backends/web/qtwebkit/: CMakeLists.txt
src/modules/windows/preferences/: AdvancedPreferencesPage.ui
src/ui/: TabBarWidget.cpp  WebsitePreferencesDialog.ui
